--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase": "^10.4.0",
+    "mysql": "^2.18.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
