--- a/package.json
+++ b/package.json
@@ -16,16 +16,22 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^10.4.0",
+    "framer-motion": "^10.16.4",
     "mysql": "^2.18.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "recharts": "^2.8.0"
+    "react-slick": "^0.29.0",
+    "react-typing-effect": "^2.0.5",
+    "recharts": "^2.8.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/react-slick": "^0.23.10",
+    "@types/react-typing-effect": "^2.0.4",
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
